--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,6 +8,7 @@ requires:
     ref: master
     sync: true
 deploy:
+  statusCheckDeadlineSeconds: 60
   kubectl:
     manifests:
       - k8s/*.yaml
