--- a/k8s/3-kcc-storage.yaml
+++ b/k8s/3-kcc-storage.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   versioning:
     enabled: true
-  uniformBucketLevelAccess: true
+  uniformBucketLevelAccess: false
   location: eu
 ---
 apiVersion: storage.cnrm.cloud.google.com/v1beta1
