--- a/k8s/3-kcc-storage.yaml
+++ b/k8s/3-kcc-storage.yaml
@@ -4,7 +4,7 @@ kind: StorageBucket
 metadata:
   annotations:
     cnrm.cloud.google.com/force-destroy: "true"
-  name: gcp-asm-crfa-djq8kx-kcc-demo
+  name: <PROJECT_ID>-kcc-demo
   namespace: kcc-deploy
 spec:
   versioning:
@@ -19,7 +19,7 @@ metadata:
   namespace: kcc-deploy
 spec:
   bucketRef:
-    name: gcp-asm-crfa-djq8kx-kcc-demo
+    name: <PROJECT_ID>-kcc-demo
   entity: allAuthenticatedUsers
   role: READER  
 ---
@@ -30,7 +30,7 @@ metadata:
   namespace: kcc-deploy
 spec:
   bucketRef:
-    name: gcp-asm-crfa-djq8kx-kcc-demo
+    name: <PROJECT_ID>-kcc-demo
   payloadFormat: JSON_API_V1
   topicRef:
     name: pubsub-kcc-demo
