--- a/prereq/0-enable-ns.yaml
+++ b/prereq/0-enable-ns.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: gcp-asm-crfa-djq8kx
+    cnrm.cloud.google.com/project-id: <PROJECT_ID>
   name: kcc-deploy
