--- a/prereq/0-enable-kcc.yaml
+++ b/prereq/0-enable-kcc.yaml
@@ -8,4 +8,4 @@ metadata:
   name: configconnector.core.cnrm.cloud.google.com
 spec:
  mode: cluster
- googleServiceAccount: "cnrm-kcc@<PROJECT_ID>.iam.gserviceaccount.com"
+ googleServiceAccount: "kcc-build@goog-renewing-grackle.iam.gserviceaccount.com"
